# ferrosonic

./: .claude-block-count.jsonl  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  install.sh
.config/: nextest.toml
.github/workflows/: release.yml  test.yml
contrib/: ferrosonicd.service
docs/: AUDIT-2026-05-13.md  KNOWN-ISSUES.md  LOCK-ORDER.md  MUTATION-BASELINE.md  README.md  STABILIZATION.md  SUBPROCESS-LEAK-BUG.md  TESTING.md  mutants_exclusions.md  themes.md
docs/screenshots/: gruvbox_theme.avif  nord_theme.avif
scripts/: mutants.sh
src/: error.rs  io_util.rs  lib.rs  main.rs  proc_util.rs  secret.rs
src/app/: cava.rs  cava_pipe.rs  client_state.rs  event_pump.rs  event_source.rs  input.rs  input_artists.rs  input_library.rs  input_playlists.rs  input_queue.rs  input_server.rs  input_settings.rs  input_songs.rs  lifecycle.rs  mod.rs  models.rs  mouse.rs  mouse_artists.rs  mouse_library.rs  mouse_playlists.rs  page_state.rs  playback.rs  repo.rs  spawn_daemon.rs  state.rs
src/audio/: mpv.rs  pipewire.rs
src/config/: mod.rs  paths.rs
src/daemon/: core.rs  library.rs  library_ops.rs  loaders.rs  mod.rs  notify.rs  persistence.rs  playback_ops.rs  playback_tick.rs  polling.rs  queue_ops.rs  run.rs  scrobble.rs  settings_ops.rs  state.rs
src/ipc/: client.rs  frame.rs  mod.rs  path.rs  protocol.rs  server.rs  socket_client.rs  spawn.rs
src/mpris/: server.rs
src/subsonic/: auth.rs  client.rs  models.rs
src/ui/: chafa_ext.rs  cover_art.rs  footer.rs  header.rs  layout.rs  mod.rs  quit_prompt.rs  styled_lines.rs  theme.rs  theme_builtins.rs  widget_cava.rs  widget_now_playing.rs
src/ui/pages/: artists.rs  library.rs  mod.rs  playlists.rs  queue.rs  server.rs  settings.rs  songs.rs
src/ui/widgets/: mod.rs  now_playing.rs  progress_bar.rs
tests/: app_lifecycle.rs  apply_event_song_star.rs  apply_event_variants.rs  binary_cli_combos.rs  binary_cli_flags.rs  binary_flag_permutations.rs  buffered_playback.rs  cava_drain.rs  cava_helpers.rs  cava_screen_to_rows.rs  cava_widget_full.rs  chafa_encoding.rs  config_on_disk_security.rs  config_password_resolution.rs  config_paths_full.rs  config_proptest.rs  config_validate_and_save.rs  cover_art.rs  cover_art_chafa_loaded.rs  cover_art_chafa_paths.rs  cover_art_fallbacks.rs  cover_art_full.rs  cover_art_protocol_paths.rs  daemon_actions.rs  daemon_auto_continue.rs  daemon_core_effects.rs  daemon_error_branches.rs  daemon_idle_exit.rs  daemon_navigation.rs  daemon_play_queue.rs  daemon_playback_tick.rs  daemon_polling.rs  daemon_preload_resync.rs  daemon_queue_clear.rs  daemon_queue_ops_more.rs  daemon_seek_resume.rs  daemon_setters.rs  daemon_settings_config.rs  daemon_settings_repeat.rs  daemon_star_sync.rs  (+150 more)
tests/__fixtures__/corpus/fuzz_cava_vt100/: seed_001_ansi_colors  seed_002_truncated_escape  seed_004_control_chars
tests/__fixtures__/corpus/fuzz_config_toml/: seed_001_minimal_valid  seed_002_malformed_brackets  seed_003_no_required_field  seed_004_unknown_field  seed_005_password_special_chars
tests/__fixtures__/corpus/fuzz_ipc_frame/: seed_005_malformed_json
tests/__fixtures__/corpus/fuzz_mpv_reply/: 01_response_with_request_id.json  02_event_file_loaded.json  03_truncated.json  04_invalid_json.json
tests/__fixtures__/corpus/fuzz_subsonic_response/: 03_unknown_field.json
tests/__fuzz__/fuzz_ipc_frame/corpus/: seed_001_valid_ping
tests/common/: fake_mpv.rs  fake_subsonic.rs  fixtures.rs  mod.rs  pw_recorder.rs  recording_client.rs  render.rs  test_daemon.rs
tests/snapshots/: cava_widget_full__cava_widget_breaks_at_height_overflow.snap  cava_widget_full__cava_widget_renders_default_color.snap  cava_widget_full__cava_widget_renders_indexed_color.snap  cava_widget_full__cava_widget_renders_multiple_spans_in_a_row.snap  cava_widget_full__cava_widget_renders_rgb_color.snap  cava_widget_full__cava_widget_truncates_text_overflowing_width.snap  cava_widget_full__cava_widget_with_empty_screen_returns_early.snap  cava_widget_full__cava_widget_with_zero_area_returns_early.snap  cover_art_chafa_paths__render_with_chafa_cache_blits_cells_to_buffer.snap  ui_queue_render_states__empty_queue_renders_placeholder_or_empty.snap  ui_queue_render_states__queue_with_current_track_renders_play_indicator.snap  ui_queue_render_states__queue_with_disc_and_track_renders_disc_track_format.snap  ui_queue_render_states__queue_with_disc_one_and_track_uses_hash_format.snap  ui_queue_render_states__queue_with_no_position_renders_all_upcoming.snap  ui_queue_render_states__queue_with_played_tracks_uses_played_style.snap  ui_queue_render_states__queue_with_selected_played_uses_bold_played_style.snap  ui_queue_render_states__queue_with_selected_upcoming_uses_primary_style.snap  ui_queue_render_states__queue_with_starred_song_renders_star_indicator.snap  ui_queue_render_states__queue_with_track_number_only_renders_hash_track.snap  ui_server_page_render__server_page_with_error_status_uses_error_style.snap  ui_server_page_render__server_page_with_failed_status_uses_error_style.snap  ui_server_page_render__server_page_with_neutral_status_uses_accent_style.snap  ui_server_page_render__server_page_with_no_status_renders_without_panic.snap  ui_server_page_render__server_page_with_populated_username_renders_value.snap  ui_server_page_render__server_page_with_saved_status_uses_success_style.snap  ui_server_page_render__server_page_with_selected_save_button_uses_highlight_style.snap  ui_server_page_render__server_page_with_selected_test_button_uses_highlight_style.snap  ui_server_page_render__server_page_with_success_status_uses_success_style.snap  ui_server_page_render__server_page_with_text_field_selected_renders_editing_value.snap  ui_smoke__library_page_renders_without_panic.snap  ui_smoke__now_playing_widget_renders_with_a_loaded_track.snap  ui_smoke__playlists_page_renders_without_panic.snap  ui_smoke__queue_page_renders_without_panic.snap  ui_smoke__quickplay_page_renders_without_panic.snap  ui_smoke__server_page_renders_without_panic.snap  ui_smoke__settings_page_renders_without_panic.snap
(+2 files in other folders)
