[package]
name = "ferrosonic"
version = "0.4.1"
edition = "2021"
description = "A terminal-based Subsonic music client with bit-perfect audio playback"
license = "MIT"
authors = ["ferrosonic contributors"]

[lib]
name = "ferrosonic"
path = "src/lib.rs"

[[bin]]
name = "ferrosonic"
path = "src/bin/ferrosonic.rs"

[[bin]]
name = "ferrosonicd"
path = "src/bin/ferrosonicd.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "process", "signal"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
tui-tree-widget = "0.22"

# HTTP client for Subsonic API. rustls (not openssl) so the release
# binary can be statically linked against musl and run on any distro.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# D-Bus / MPRIS
zbus = "5"
mpris-server = "0.8"

# Unix utilities
libc = "0.2"

# Utilities
dirs = "6"
url = "2"
urlencoding = "2"
md5 = "0.7"
rand = "0.8"
unicode-width = "0.2"
strum = "0.26"
strum_macros = "0.26"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Async channels
futures = "0.3"

# Async trait methods with `dyn` support (DaemonClient trait)
async-trait = "0.1"

# Per-process temp file for cava config (auto-cleanup, no path collision)
tempfile = "3"

# Terminal emulator for cava integration
vt100 = "0.15"

# Cover-art display: ratatui-image autodetects kitty / iTerm2 / sixel
# and falls back to half-blocks in terminals without image support.
# `image` is the JPEG/PNG decoder ratatui-image consumes.
ratatui-image = { version = "8", default-features = false, features = ["chafa"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
# Direct libchafa wrapper for high-quality halfblocks (ratatui-image's
# bundled chafa wrapper doesn't expose dither / work-factor knobs).
libloading = "0.8"

[dev-dependencies]
# Async HTTP fakes for Subsonic API. Records request bodies for
# assertions; mounts on a local port.
wiremock = "0.6"
# Property-based testing with proper shrinking.
proptest = "1"
# Readable diffs on assertion failures.
pretty_assertions = "1"
# Pattern-match assertions for enums.
assert_matches = "1"
# Time and IO mocking utilities (`tokio::time::pause`, `block_on`).
tokio-test = "0.4"
# Trait-level mocks where a dyn-Trait boundary already exists.
mockall = "0.13"
# Serialize tests that share global state (env vars, working dir).
serial_test = "3"
# Subprocess-based binary tests (asserts on exit code, stdout, stderr).
assert_cmd = "2"
predicates = "3"
# Snapshot testing for ratatui frame output.
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

